--- a/extension/package.json
+++ b/extension/package.json
@@ -13,7 +13,8 @@
   "license": "UNLICENSED",
   "dependencies": {
     "stable": "^0.1.6",
-    "xregexp": "^3.2.0"
+    "xregexp": "^3.2.0",
+    "node-bigcommerce": "^3.0.0"
   },
   "devDependencies": {
     "istanbul": "^0.4.5",
