--- a/extension/package.json
+++ b/extension/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "prototype",
   "scripts": {
-    "test": "JUNIT_REPORT_PATH=../build/mocha.xml JUNIT_REPORT_STACK=1 mocha --recursive test -R mocha-jenkins-reporter",
-    "cover": "istanbul cover _mocha -- --recursive"
+    "test": "mocha --require ../test/setupBackend.js --recursive ../test/unit -R mocha-jenkins-reporter",
+    "testIntegration": "mocha --require ../test/setupBackend.js --recursive ../test/integration",
+    "cover": "istanbul cover --dir ../coverage _mocha -- --require ../test/setupBackend.js --recursive ../test/unit"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,9 @@
     "node-bigcommerce": "^3.0.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "sinon": "^4.1.2",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-jenkins-reporter": "^0.3.7",
