--- a/extension/package.json
+++ b/extension/package.json
@@ -12,15 +12,17 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
+    "node-bigcommerce": "^3.0.0",
     "stable": "^0.1.6",
-    "xregexp": "^3.2.0",
-    "node-bigcommerce": "^3.0.0"
+    "xregexp": "^3.2.0"
   },
   "devDependencies": {
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-jenkins-reporter": "^0.3.7",
     "nock": "^9.0.13",
+    "sinon": "^4.1.2",
+    "chai": "^4.1.2",
     "request": "^2.83.0"
   },
   "standard": {
@@ -28,7 +30,9 @@
       "/products/sortCharacteristics.js"
     ],
     "env": {
-      "mocha": true
+      "mocha": true,
+      "chai": true,
+      "sinon": true
     }
   }
 }
