--- a/extension/package.json
+++ b/extension/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
+    "chai-as-promised": "^7.1.1",
     "mocha-jenkins-reporter": "^0.3.7",
     "nock": "^9.0.13",
     "sinon": "^4.1.2",
