--- a/extension/package.json
+++ b/extension/package.json
@@ -20,14 +20,12 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "sinon": "^4.1.2",
+    "chai-properties": "^1.3.0",
+    "chai-subset": "^1.6.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
-    "chai-as-promised": "^7.1.1",
     "mocha-jenkins-reporter": "^0.3.7",
     "nock": "^9.0.13",
-    "sinon": "^4.1.2",
-    "chai": "^4.1.2",
     "request": "^2.83.0"
   },
   "standard": {
