--- a/extension/package.json
+++ b/extension/package.json
@@ -14,13 +14,11 @@
   "license": "UNLICENSED",
   "dependencies": {
     "node-bigcommerce": "^3.0.0",
-    "stable": "^0.1.6",
-    "xregexp": "^3.2.0"
+    "stable": "^0.1.6"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "chai-properties": "^1.3.0",
     "chai-subset": "^1.6.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
