--- a/extension/package.json
+++ b/extension/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "sinon": "^4.1.2",
     "chai-subset": "^1.6.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
