--- a/extension/package.json
+++ b/extension/package.json
@@ -19,13 +19,21 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "sinon": "^4.1.2",
     "chai-subset": "^1.6.0",
+    "eslint": "^4.12.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-chai": "0.0.1",
+    "eslint-plugin-chai-expect": "^1.1.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-jenkins-reporter": "^0.3.7",
     "nock": "^9.0.13",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "sinon": "^4.1.2"
   },
   "standard": {
     "ignore": [
