--- a/extension/package.json
+++ b/extension/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@shopgate/bigcommerce-products",
+  "name": "@shopgate/bigcommerce-catalog",
   "version": "1.0.0",
   "description": "prototype",
   "scripts": {
-    "test": "mocha --require ../test/setupBackend.js --recursive ../test/unit -R mocha-jenkins-reporter",
-    "testIntegration": "mocha --require ../test/setupBackend.js --recursive ../test/integration",
-    "cover": "istanbul cover --dir ../coverage _mocha -- --require ../test/setupBackend.js --recursive ../test/unit"
+    "test": "./node_modules/.bin/_mocha --require ../test/setupBackend.js --recursive ../test/unit -R mocha-jenkins-reporter",
+    "testIntegration": "./node_modules/.bin/_mocha --require ../test/setupBackend.js --recursive ../test/integration",
+    "cover": "./node_modules/.bin/istanbul cover --dir ./coverage _mocha -- --require ../test/setupBackend.js --recursive ../test/unit",
+    "standard": "./node_modules/.bin/standard"
   },
   "repository": {
     "type": "git",
@@ -19,13 +20,14 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "sinon": "^4.1.2",
     "chai-subset": "^1.6.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-jenkins-reporter": "^0.3.7",
     "nock": "^9.0.13",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "sinon": "^4.1.2",
+    "standard": "^10.0.3"
   },
   "standard": {
     "ignore": [
