BIGC-505 Simple products

--- a/extension/package.json
+++ b/extension/package.json
@@ -4,7 +4,7 @@
   "description": "prototype",
   "scripts": {
     "test": "mocha --require ../test/setupBackend.js --recursive ../test/unit -R mocha-jenkins-reporter",
-    "testIntegration": "mocha --require ../test/setupBackend.js --recursive ../test/integration",
+    "testIntegration": "mocha --timeout 3000 --require ../test/setupBackend.js --recursive ../test/integration",
     "cover": "istanbul cover --dir ../coverage _mocha -- --require ../test/setupBackend.js --recursive ../test/unit"
   },
   "repository": {
