BIGC-603: updated .travis.yml - removed Integration tests and added dependency checker

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,13 @@ node_js:
 
 install:
 - cd extension; npm install; cd ..
+- npm install nsp -g
 
 script:
 - cd extension;
 - npm run test
-- npm run testIntegration
 - npm run standard
+- npm run dependencies
 
 notifications:
   slack:
