--- a/extension/package.json
+++ b/extension/package.json
@@ -1,18 +1,15 @@
 {
   "name": "@shopgate/bigcommerce-catalog",
   "version": "1.0.0",
-  "description": "prototype",
+  "description": "Shopgate Cloud BigCommerce Catalog",
   "scripts": {
     "test": "./node_modules/.bin/_mocha --require ../test/setupBackend.js --recursive ../test/unit -R mocha-jenkins-reporter",
     "testIntegration": "./node_modules/.bin/_mocha --use_strict --timeout 3000 --require ../test/setupBackend.js --recursive ../test/integration",
     "cover": "./node_modules/.bin/istanbul cover --dir ./coverage _mocha -- --require ../test/setupBackend.js --recursive ../test/unit",
-    "standard": "./node_modules/.bin/standard"
+    "standard": "./node_modules/.bin/standard",
+    "dependency": "./node_modules/.bin/nsp check"
   },
-  "repository": {
-    "type": "git",
-    "url": "ssh://git@stash.localdev.cc:7999/sgx/bigcommerce-products.git"
-  },
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "dependencies": {
     "node-bigcommerce": "^3.0.0",
     "stable": "^0.1.6"
@@ -38,9 +35,6 @@
     "standard": "^10.0.3"
   },
   "standard": {
-    "ignore": [
-      "/products/sortCharacteristics.js"
-    ],
     "env": {
       "mocha": true,
       "chai": true,
