--- a/extension/package.json
+++ b/extension/package.json
@@ -16,8 +16,7 @@
     }
   ],
   "dependencies": {
-    "node-bigcommerce": "^3.0.0",
-    "stable": "^0.1.6"
+    "node-bigcommerce": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
