--- a/extension/package.json
+++ b/extension/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "Shopgate Cloud BigCommerce Catalog",
   "scripts": {
-    "test": "./node_modules/.bin/_mocha --require ../test/setupBackend.js --recursive ../test/unit -R mocha-jenkins-reporter",
-    "testIntegration": "./node_modules/.bin/_mocha --use_strict --timeout 3000 --require ../test/setupBackend.js --recursive ../test/integration",
-    "cover": "./node_modules/.bin/istanbul cover --dir ./coverage _mocha -- --require ../test/setupBackend.js --recursive ../test/unit",
-    "standard": "./node_modules/.bin/standard",
-    "dependency": "./node_modules/.bin/nsp check"
+    "test": "_mocha --require ../test/setupBackend.js --recursive ../test/unit -R mocha-jenkins-reporter",
+    "testIntegration": "_mocha --use_strict --timeout 3000 --require ../test/setupBackend.js --recursive ../test/integration",
+    "standard": "standard",
+    "dependency": "nsp check"
   },
   "licenses": [
     {
@@ -30,7 +29,6 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-jenkins-reporter": "^0.3.7",
     "nock": "^9.0.13",
