BIGC-603: Added package 'lint-staged' and 'pre-commit' for pre commit run of unit tests and linter

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
       script:
       - cd extension
       - npm run test
-      - npm run standard
+      - npm run lint
       - npm run dependency
     - node_js: 8
       env: TYPE=INTEGRATION
