--- a/extension-config.json
+++ b/extension-config.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.5",
+  "version": "0.1.6-beta1",
   "id": "@shopgate/bigcommerce-catalog",
   "directories": {
     "steps": "./extension/",
