--- a/extension/package.json
+++ b/extension/package.json
@@ -38,7 +38,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "mocha": "^5.2.0",
-    "mocha-jenkins-reporter": "0.3.9",
+    "mocha-jenkins-reporter": "^0.4.0",
     "nock": "^9.6.0",
     "nyc": "^12.0.2",
     "request": "^2.87.0",
